# Dorotauri

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
docs/: inter-agent-communication-study.md  mcp-orchestrator.md  modifications-tab.md
docs/audit-legacy-features/: 00-sommaire.md  01-broadcast.md  02-memory.md  03-automations.md  04-projects.md  05-recurring-tasks.md  06-kanban.md  07-plugins-marketplace.md  08-world-zones.md  09-chat-conversations.md  10-electron-codebase.md  11-docker.md
electron/: main.ts
electron/constants/: index.ts
electron/core/: agent-manager.ts  tray-manager.ts  window-manager.ts
electron/handlers/: automation-handlers.ts  cli-paths-handlers.ts  ipc-handlers.ts  mcp-config-handlers.ts  scheduler-handlers.ts  world-handlers.ts
electron/providers/: claude-provider.ts  cli-provider.ts  codex-provider.ts  gemini-provider.ts  opencode-provider.ts  pi-provider.ts
electron/resources/: agent-instructions.md  local-agent-runner.js  super-agent-instructions.md
electron/services/: mcp-orchestrator.ts  slack-bot.ts  telegram-bot.ts  update-checker.ts
electron/utils/: cron-parser.ts  index.ts  statusline.ts
hooks/: notification.sh  on-stop.sh  permission-request.sh  post-tool-use.sh  session-end.sh  session-start.sh  task-completed.sh  user-prompt-submit.sh
hooks/gemini/: notification.sh  on-stop.sh  post-tool-use.sh  session-end.sh  session-start.sh  user-prompt-submit.sh
mcp-code-intelligence/: package.json  tsconfig.json
mcp-code-intelligence/src/: index.ts
mcp-kanban/src/: index.ts
mcp-orchestrator/: package-lock.json  package.json
mcp-orchestrator/src/: index.ts
mcp-socialdata/src/: index.ts
mcp-telegram/src/: index.ts
mcp-world/src/: index.ts
public/: icon.icns  manifest.json
scripts/: generate-icon.mjs  notarize.js
src/: globals.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_server.rs  business_state.rs  cwd_tracker.rs  db.rs  hooks.sh  lib.rs  main.rs  migration.rs  notifications.rs  pty.rs  sftp.rs  state.rs  statusline.sh  usage_watcher.rs  windows.rs
src-tauri/src/agent/: event_bus.rs  manager.rs  mod.rs  model.rs  provider.rs  pty_session.rs
src-tauri/src/commands/: agent.rs  docker.rs  layout.rs  memory.rs  mod.rs  orchestrator.rs  pty.rs  settings.rs  sftp.rs  shell.rs  ssh.rs  tab.rs  vault.rs  window.rs
src-tauri/src/embedding/: mod.rs
src-tauri/src/knowledge/: claude_memory.rs  db.rs  file_watcher.rs  indexer.rs  mod.rs  reference_graph.rs  repo_map.rs  search.rs  session_capture.rs  tree_sitter.rs
src-tauri/tests/: api_integration.rs
(+342 files in other folders)
