[package]
name = "dorotoring"
version = "1.2.5"
edition = "2021"

[lib]
name = "dorotoring_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
portable-pty = "0.8"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled", "load_extension"] }
# Updater plugin — not yet registered; requires signing keys to be configured first
tauri-plugin-updater = "2"
axum = { version = "0.8", features = ["ws"] }
bytes = "1"
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", features = ["stream"] }
flate2 = "1"
tar = "0.4"
futures-util = "0.3"
russh = "0.46"
russh-keys = "0.46"
russh-sftp = "2.0"
async-trait = "0.1"
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
notify = { version = "7", features = ["macos_kqueue"] }
sha2 = "0.10"
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
ndarray = "0.17"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
